--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <p>Cliquer sur la div extérieure déclenche l'alerte "OUTER DIV". Toutefois, cliquer sur la div intérieure déclenche deux alertes&thinsp;: en premier lieu, "INNER DIV"&thinsp;; en second lieu, "OUTER DIV".</p>
     
-    <p>Cela est la conséquence du fait que la div intérieure est placé dans la div extérieure.</p>
+    <p>Cela est la conséquence du fait que la div intérieure est placée dans la div extérieure.</p>
 
     <p>La méthode stopPropagation() a pour effet que cliquer sur la div intérieure déclenchera uniquement l'alerte "INNER DIV".</p>
 
